<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:text="@string/str_menu"
        style="@style/txt_title"/>

    <Button
        android:id="@+id/btn_addHorse"
        android:text="@string/str_addHorse"
        android:onClick="goToAddHorse"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_showAllHorses"
        android:text="Se alla hästar"
        android:onClick="goToShowAllHorses"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_deleteHorse"
        android:text="@string/str_deleteHorse"
        android:onClick="goToDeleteHorse"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_updateHorse"
        android:text="@string/str_updateHorse"
        android:onClick="goToUpdateHorse"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_searchHorse"
        android:text="@string/str_searchHorse"
        android:onClick="goToSearchHorse"
        style="@style/button"/>


</LinearLayout>