<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateHorse">

    <TextView
        android:id="@+id/txt_title"
        android:text="@string/str_updateHorse"
        style="@style/txt_title"/>

    <EditText
        android:id="@+id/txt_searchName"
        style="@style/edit_text"
        android:hint="@string/str_horseName" />

    <Button
        android:id="@+id/btn_search"
        android:text="@string/str_searchHorse"
        style="@style/button"
        android:onClick="btnSearchHorse"/>

    <TextView
        android:id="@+id/txt_newData"
        android:text="@string/str_updateData"
        style="@style/txt_title"/>

    <!--  New name horse -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_horseName"
            android:text="@string/str_horseName"
            style="@style/txt_update" />

        <EditText
            android:id="@+id/txt_newHorseName"
            style="@style/edit_text"
            android:layout_width="184dp" />

    </LinearLayout>

    <!--  New name owner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_ownerName"
            android:text="@string/str_ownerName"
            style="@style/txt_update"/>

        <EditText
            android:id="@+id/txt_newOwnerName"
            style="@style/edit_text"
            android:layout_width="184dp" />

    </LinearLayout>

    <!--  New shoe size -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_shoeSize"
            android:text="@string/str_shoeSize"
            style="@style/txt_update"/>

        <EditText
            android:id="@+id/txt_newShoeSize"
            style="@style/edit_text"
            android:layout_width="184dp"
            android:inputType="text"/>

    </LinearLayout>

    <!--  New phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_phone"
            android:text="@string/str_phone"
            style="@style/txt_update"/>

        <EditText
            android:id="@+id/txt_newPhone"
            style="@style/edit_text"
            android:layout_width="184dp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/str_save"
        style="@style/button"
        android:onClick="btnSaveUpdate"/>

</LinearLayout>